[tool.poetry]
name = "ml-algorithm-study"
version = "0.1.0"
description = ""
authors = ["Hajar Razip <mshajarrazip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
ipykernel = "^6.21.0"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
seaborn = "^0.12.2"
mlscratch = "0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
